# music-video-organizer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: container.yml
docs/: ROADMAP.md
src/mvo/: __init__.py  __main__.py  acoustid.py  analyzer.py  artwork.py  artwork_report.py  cli.py  confidence.py  config.py  coverart.py  duplicate_report.py  duplicates.py  enrichment.py  enrichment_report.py  execution_report.py  executor.py  fingerprint_report.py  fingerprinting.py  history.py  models.py  musicbrainz.py  nfo.py  overrides.py  parser.py  plan_report.py  planner.py  preflight.py  preflight_report.py  quarantine.py  report.py  review.py  review_media.py  scanner.py  tokenizer.py
tests/: test_acoustid.py  test_analyzer.py  test_artwork.py  test_artwork_report.py  test_cli.py  test_confidence.py  test_coverart.py  test_duplicate_report.py  test_duplicates.py  test_enrichment.py  test_enrichment_report.py  test_execution_report.py  test_executor.py  test_fingerprint_report.py  test_fingerprinting.py  test_musicbrainz.py  test_overrides.py  test_parser.py  test_plan_report.py  test_planner.py  test_preflight.py  test_preflight_report.py  test_quarantine.py  test_report.py  test_review.py  test_review_media.py  test_scanner.py  test_tokenizer.py
