[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "music-video-organizer"
version = "0.9.0.dev0"
description = "Safe, read-only music video filename analysis for Jellyfin and ErsatzTV libraries"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Music Video Organizer contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
mvo = "mvo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mvo"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
