[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liner-notes"
version = "1.3.0.dev0"
description = "Liner Notes: safe music-video organization for Jellyfin and ErsatzTV"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Liner Notes contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
liner-notes = "mvo.cli:main"
mvo = "mvo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mvo"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
